--- a/projects/crazy-math-game/package.json
+++ b/projects/crazy-math-game/package.json
@@ -11,7 +11,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d dist -b gh-pages -r https://github.com/muhib-010/my-portfolio.git"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
