--- a/projects/crazy-math-game/package.json
+++ b/projects/crazy-math-game/package.json
@@ -11,6 +11,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "tailwind:init": "tailwindcss init -p",
     "deploy": "vite build && gh-pages -d dist -b gh-pages -r https://github.com/muhib-010/my-portfolio.git"
   },
   "dependencies": {
@@ -30,7 +31,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
