--- a/projects/crazy-math-game/package.json
+++ b/projects/crazy-math-game/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "tailwind:init": "tailwindcss init -p",
-    "deploy": "vite build && gh-pages -d dist -b gh-pages -r https://github.com/muhib-010/my-portfolio.git"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
