--- a/projects/crazy-math-game/package.json
+++ b/projects/crazy-math-game/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "tailwind:init": "tailwindcss init -p",
-    "deploy": "gh-pages -d dist"
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
